add support MKS SERVO57B

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -10,17 +10,15 @@
 
 [platformio]
 src_dir      = src
-default_envs = mks_servo42b
+default_envs = mks_servo57b
 
-#MKS SERVO42B
+#MKS SERVO42B(STM32F103C8T6)
 [env:mks_servo42b]
 platform = ststm32
-board = genericSTM32F103CB
+board = genericSTM32F103C8
 framework = stm32cube
-upload_protocol = stlink
-debug_tool = stlink
-#upload_protocol = jlink
-#debug_tool = jlink
+upload_protocol = jlink
+debug_tool = jlink
 build_flags = -fmax-errors=5
   -g
   -ggdb
@@ -32,3 +30,22 @@ build_flags = -fmax-errors=5
   -D STM32F10X_HD
   -D USE_STDPERIPH_DRIVER
   -D MKS_SERVO42B
+
+#MKS SERVO57B(STM32F103CBT6)
+[env:mks_servo57b]
+platform = ststm32
+board = genericSTM32F103CB
+framework = stm32cube
+upload_protocol = jlink
+debug_tool = jlink
+build_flags = -fmax-errors=5
+  -g
+  -ggdb
+  -IMKS_SERVO/src/APP
+  -IMKS_SERVO/src/BSP
+  -IMKS_SERVO/src/CMSIS
+  -IMKS_SERVO/src/LIB/inc
+  -IMKS_SERVO/src/LIB/src
+  -D STM32F10X_HD
+  -D USE_STDPERIPH_DRIVER
+  -D MKS_SERVO57B
