Update ststm32@~11.0 version in platformio.ini file

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -14,7 +14,7 @@ default_envs = mks_servo42b
 
 #MKS SERVO42B(STM32F103C8T6)
 [env:mks_servo42b]
-platform = ststm32
+platform = ststm32@~11.0
 board = genericSTM32F103C8
 framework = stm32cube
 upload_protocol = jlink
@@ -33,7 +33,7 @@ build_flags = -fmax-errors=5
 
 #MKS SERVO57B(STM32F103CBT6)
 [env:mks_servo57b]
-platform = ststm32
+platform = ststm32@~11.0
 board = genericSTM32F103CB
 framework = stm32cube
 upload_protocol = jlink
